// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> renders page elements as expected 1`] = `
<div>
  <section
    class="flex items-center justify-between ph3 f2 f1-l"
  >
    <h6
      class="mv0"
    >
      Nutrition List
    </h6>
    <button
      class="f6 f5-l fw6 pa2 br2 b--dark-green white bg-dark-green"
    >
      <i
        aria-hidden="true"
        class="fa fa-refresh mr3"
      >
         
      </i>
      RESET DATA
    </button>
  </section>
  <div
    class="ph2 pv4"
  >
    <section
      class="flex items-center justify-between mb0 w100 mw100 pa3 bg-enable-light-pink"
    >
      <div>
        <label
          class="dark-pink f6 f5-l fw8"
        >
          0 selected
        </label>
      </div>
      <div>
        <button
          class="f6 f5-l b--white fw6 ph3 pv2 green mr2 bg-white"
        >
          <i
            aria-hidden="true"
            class="fa fa-plus mr3"
          >
             
          </i>
          ADD NEW
        </button>
        <button
          class="f6 f5-l fw6 b--disalbe-light-pink pv2 bg-disable-light-pink"
          disabled=""
        >
          <i
            aria-hidden="true"
            class="fa fa-trash-o mr3"
          >
             
          </i>
          DELETE
        </button>
      </div>
    </section>
    <section
      class="flex items-center dark-gray justify-center pt4 f2 f1-l"
    >
      <div
        class="fa-2x"
      >
        <i
          aria-hidden="true"
          class="fa fa-spinner fa-spin"
        />
      </div>
    </section>
  </div>
</div>
`;

exports[`<App/> renders page elements as expected 2`] = `
<div>
  <section
    class="flex items-center justify-between ph3 f2 f1-l"
  >
    <h6
      class="mv0"
    >
      Nutrition List
    </h6>
    <button
      class="f6 f5-l fw6 pa2 br2 b--dark-green white bg-dark-green"
    >
      <i
        aria-hidden="true"
        class="fa fa-refresh mr3"
      >
         
      </i>
      RESET DATA
    </button>
  </section>
  <div
    class="ph2 pv4"
  >
    <section
      class="flex items-center justify-between mb0 w100 mw100 pa3 bg-enable-light-pink"
    >
      <div>
        <label
          class="dark-pink f6 f5-l fw8"
        >
          0 selected
        </label>
      </div>
      <div>
        <button
          class="f6 f5-l b--white fw6 ph3 pv2 green mr2 bg-white"
        >
          <i
            aria-hidden="true"
            class="fa fa-plus mr3"
          >
             
          </i>
          ADD NEW
        </button>
        <button
          class="f6 f5-l fw6 b--disalbe-light-pink pv2 bg-disable-light-pink"
          disabled=""
        >
          <i
            aria-hidden="true"
            class="fa fa-trash-o mr3"
          >
             
          </i>
          DELETE
        </button>
      </div>
    </section>
    <div
      class="overflow-auto"
    >
      <table
        class="f6 f5-l mw-100 w-100"
        data-testid="nutrition-table"
      >
        <thead>
          <tr>
            <th
              class="pl3 tc fw6 bb b--black-20 pv3 bg-white"
            >
              <input
                class="pv3 bb b--black-20 v-mid"
                id="ids"
                type="checkbox"
              />
            </th>
            <th
              class="cursor-pointer sortable-column tc fw6 bb b--black-20 pv3 bg-white"
              data-testid="name"
              id="name"
            >
              Dessert (100g serving)
              <i
                aria-hidden="true"
                class="fa fa-sort ml1 v-mid"
              />
            </th>
            <th
              class="cursor-pointer sortable-column tc fw6 bb b--black-20 pv3 bg-white"
              id="calories"
            >
              Calories
              <i
                aria-hidden="true"
                class="fa fa-sort ml1 v-mid"
              />
            </th>
            <th
              class="cursor-pointer sortable-column tc fw6 bb b--black-20 pv3 bg-white"
              id="fat"
            >
              Fat (g)
              <i
                aria-hidden="true"
                class="fa fa-sort ml1 v-mid"
              />
            </th>
            <th
              class="cursor-pointer sortable-column tc fw6 bb b--black-20 pv3 bg-white"
              id="carbs"
            >
              Carbs (g)
              <i
                aria-hidden="true"
                class="fa fa-sort ml1 v-mid"
              />
            </th>
            <th
              class="cursor-pointer sortable-column tc fw6 bb b--black-20 pv3 bg-white"
              id="protein"
            >
              Protein (g)
              <i
                aria-hidden="true"
                class="fa fa-sort ml1 v-mid"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="bg-double-light-gray lh-copy"
        >
          <tr>
            <td
              class="pl3 tc fw6 pv3 bb b--black-20"
            >
              <input
                class="v-mid"
                id="fafa6860-d77d-11ea-9788-ad71c48281af"
                type="checkbox"
              />
            </td>
            <td
              class="tc fw6 pv3 bb b--black-20"
            >
              KitKat
            </td>
            <td
              class="tc fw6 pv3 bb b--black-20"
            >
              518
            </td>
            <td
              class="tc fw6 pv3 bb b--black-20"
            >
              26
            </td>
            <td
              class="tc fw6 pv3 bb b--black-20"
            >
              65
            </td>
            <td
              class="tc fw6 pv3 bb b--black-20"
            >
              60
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
